@@ -120,7 +120,7 @@ PHP_RSHUTDOWN_FUNCTION(readline)
 #if HAVE_RL_CALLBACK_READ_CHAR
 	if (_prepped_callback) {
 		rl_callback_handler_remove();
-		FREE_ZVAL(_prepped_callback);
+		zval_ptr_dtor(&_prepped_callback);
 		_prepped_callback = 0;
 	}
 #endif
@@ -507,10 +507,11 @@ PHP_FUNCTION(readline_callback_handler_install)
 		efree(name);
 		RETURN_FALSE;
 	}
+	efree(name);
 
 	if (_prepped_callback) {
 		rl_callback_handler_remove();
-		FREE_ZVAL(_prepped_callback);
+		zval_ptr_dtor(&_prepped_callback);
 	}
 
 	MAKE_STD_ZVAL(_prepped_callback);
